fix: News layout on landing on narrower viewports

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -28,12 +28,17 @@ body.home {
         margin-bottom: 1em;
       }
       .news-item-card {
-        flex-basis: 20em;
         max-width: 90vw;
         border-radius: .5em;
         padding: 0 .75em;
         background: #fff;
         margin-right: 1em;
+
+        min-width: 320px;
+        @media screen and (min-width: $bigscreenBreakpoint) {
+          min-width: unset;
+          flex-basis: 20em;
+        }
 
         &.news-item--with-illustration {
           position: relative;
